--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
